--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Examen Bimestral de Tópicos Especiales
+      Chateando... <ion-button (click)="Onlogout()" >Salir</ion-button>
+      <ion-input placeholder="¿Quién eres?" [(ngModel)]="userName"> </ion-input>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content padding>
+  <ion-card **ngFor="let message of messages">
+    <ion-card-header>
+      {{message.nombre}} dice: 
+    </ion-card-header>
+    <ion-card-content>
+      {{message.mensaje}}
+    </ion-card-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  </ion-card>
+
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-input placeholder="escribe algo aquí"></ion-input>
+    <ion-buttons end>
+      <ion-button>
+        Enviar
+        <ion-icon name="send"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
