registro de datos en Firestore

--- a/src/app/componentes/login/login.page.html
+++ b/src/app/componentes/login/login.page.html
@@ -24,6 +24,7 @@
   
 
   <ion-button (click)="onSubmitLogin()"  expand="block"><ion-icon name="log-in-outline"></ion-icon>Login</ion-button>
+  <ion-button (click)="registro()"  expand="block"><ion-icon name="log-in-outline"></ion-icon>Registrate</ion-button>
   <img src="assets/icon/log.jpg" alt="">
 
 </ion-content>
