--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>
       Examen Bimestral de Tópicos Especiales
-      Chateando... <ion-button (click)="Onlogout()" >Salir</ion-button>
+      Chateando... <ion-button (click)="Onlogout()"  end>Salir</ion-button>
       <ion-input placeholder="¿Quién eres?" [(ngModel)]="userName"> </ion-input>
     </ion-title>
   </ion-toolbar>
